--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -112,7 +112,7 @@
                         </div>
                         <div class="col-lg-4">
                             <div class="main-navigation flex-lg-right">
-                                @await Component.InvokeAsync(typeof(CartComponent));
+                                @await Component.InvokeAsync(typeof(CartComponent))
                             </div>
                         </div>
                     </div>
@@ -122,13 +122,12 @@
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-lg-3">
-                            <nav class="category-nav primary-nav @(ViewData["IsCategoryHide"] != null? "" : "show"))">
+                            <nav class="category-nav primary-nav">
                                 <div>
                                     <a href="javascript:void(0)" class="category-trigger">
-                                        <i class="fa fa-bars"></i>Browse
-                                        categories
+                                        <i class="fa fa-bars"></i>Categories
                                     </a>
-                                @await Component.InvokeAsync(typeof(CategoryComponent));
+                                @await Component.InvokeAsync(typeof(CategoryComponent))
                                 </div>
                             </nav>
                         </div>
@@ -144,7 +143,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6">
-                            @await Component.InvokeAsync(typeof(MenuComponent));
+                            @await Component.InvokeAsync(typeof(MenuComponent))
                         </div>
                     </div>
                 </div>
